# Keyboard_USB

./: CMakeLists.txt  README.md  README.rst  out_report.overlay  prj.conf  sample.yaml
boards/: nrf52833dk_nrf52833.overlay
include/: kb_misc.h
src/: kb_misc.c  main.c
